--- a/src/main/webapp/pages/depSalud/medicina/listaConsultas.xhtml
+++ b/src/main/webapp/pages/depSalud/medicina/listaConsultas.xhtml
@@ -63,11 +63,11 @@
                          paginator="true" rows="10" paginatorPosition="top" emptyMessage="No se ha encontrado ninguna consulta"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
                          rowsPerPageTemplate="10,20,30,50,100"                         
-                         rowKey="#{consultaMedica_.id}"
+                         rowKey="#{consultaMedica_.id}" resizableColumns="true" liveResize="true"
                          selection="#{consultaMedicaListaServicio.consulMedicSeleccionada}"                         
                          selectionMode="single">
                 <f:facet name="header">  
-                    <h:outputText value="total consultas #{consultaMedicaListaServicio.resultList.size()}" />                                    
+                    <h:outputText value="Total Consultas Medicas: #{consultaMedicaListaServicio.resultList.size()}" />                                    
                 </f:facet>
                 <!--Acciones Ajax, que me permiten seleccionar y desseleccionar una Consulta Medica-->
                 <p:ajax event="rowSelect" listener="#{consultaMedicaListaServicio.onRowSelect}"   
