--- a/src/main/webapp/pages/loggedOffHome.xhtml
+++ b/src/main/webapp/pages/loggedOffHome.xhtml
@@ -38,7 +38,7 @@
 
                 <center > 
                     <p:galleria value="#{galleryController.images}" var="image" showCaption="true" panelHeight="300" style="width: 100%">  
-                        <p:graphicImage value="/resources/images/#{image}" alt="Image Description for #{image}" title="#{image}"/>  
+                        <p:graphicImage value="/resources/images/#{image}" title="Personal sección salud"/>  
                     </p:galleria> 
                 </center>
 
