--- a/src/main/webapp/pages/secretaria/paciente.xhtml
+++ b/src/main/webapp/pages/secretaria/paciente.xhtml
@@ -294,11 +294,13 @@
                     </h:panelGroup>
                 </p:panel>
                 <div class="admin-actions ">
-                    <p:commandButton id="save" action="#{pacienteHome.guardarPaciente()}" value="#{messages['common.save']}" styleClass="btn primary offset4"/>
+                    <p:commandButton id="save" action="#{pacienteHome.guardarPaciente()}" value="#{messages['common.save']}" styleClass="btn primary offset4" onclick="imgDlg.show();" />
                     &nbsp;&nbsp;
-                    <h:link outcome="/pages/secretaria/lista.xhtml?faces-redirect=true" 
-                            value="#{messages['common.cancel']}" styleClass="btn primary" >                         
-                    </h:link>
+                    <p:commandButton id="cancel" type="button" value="#{messages['common.cancel']}" immediate="true" styleClass="btn" 
+                                     onclick="#{'opDlg.show();'}" ajax="true" /> 
+                    <p:panel id="img_p" widgetVar="imgDlg" style="display:none; width: 30px;" >
+                        <h:graphicImage id="img-spinner" value="/resources/js/loader.gif" style="margin-left: -5px"/>
+                    </p:panel>
                 </div>
             </h:form>
             <p:dialog id="cancel-dialog" header="Cargar de Estudiante del Sistema de Gestion Academica" widgetVar="buscarDlg" resizable="false" modal="true">  
@@ -321,8 +323,20 @@
                                          style="margin-top:10px;"/>  
                     </div>
                 </h:form>
+            </p:dialog>                         
+            <p:dialog id="cancel-op" header="#{messages['common.delete.confirm1']}" widgetVar="opDlg" resizable="false" modal="true">  
+                <h:form id="form-op">
+                    <h:panelGroup layout="block" style="padding:5px;">  
+                        <h:outputText value="¿Está seguro que desea regresar?"/>  
+                    </h:panelGroup>                     
+                    <h:link outcome="/pages/secretaria/lista.xhtml?faces-redirect=true" onclick="opDlg.hide();" 
+                            value="#{messages['common.yes']}" styleClass="btn primary" style="margin-top: -5px; margin-left: 20%; height: 16px">  
+                    </h:link>
+                    &nbsp;                    
+                    <p:commandLink value="#{messages['common.no']}"  onclick="#{'opDlg.hide();'}"   
+                                   style="margin-top:10px;" styleClass="btn"/>  
+                </h:form>
             </p:dialog>
-
         </ui:define>
     </ui:composition>
 </html>                
