--- a/src/main/webapp/pages/depSalud/odontologia/odont.xhtml
+++ b/src/main/webapp/pages/depSalud/odontologia/odont.xhtml
@@ -46,7 +46,7 @@
                 </h3> 
                 <div class="admin-actions" style="padding-right: 0%;">
                     <p:commandButton id="saveNew" action="#{odontogramaHome.guardar()}" value="#{messages['common.add']}" 
-                                     styleClass="btn success offset4" >
+                                     styleClass="btn success offset4" onclick="imgDlg.show();">
                         <p:ajax process="@this" update=":form" rendered=":form" />
                     </p:commandButton>
                     &nbsp;&nbsp;
@@ -55,7 +55,10 @@
                         <f:param name="fichaMedicaId" value="#{odontogramaHome.fichaMedicaId}"></f:param>
                         <f:param name="consultaOdontId" value="#{odontogramaHome.consultaOdontId}"></f:param>
                         <f:param name="backView" value="#{odontogramaHome.backView}"/>
-                    </h:link>                     
+                    </h:link>
+                    <p:panel id="img_p" widgetVar="imgDlg" style="display:none;">
+                        <h:graphicImage id="img-spinner" value="/resources/js/loader.gif" />
+                    </p:panel> 
                 </div>
             </h:form>                
         </ui:define>
@@ -447,7 +450,7 @@
                                                        rendered="# {odontogramaHome.tipo ne 0}">                                 
                                             <p:ajax process="@this" update=":inicial-dialog" />
                                         </p:commandLink>-->
-                                        
+
 
                                     </h:panelGroup>                                    
                                 </p:panelGrid>                              
