--- a/src/main/webapp/pages/depSalud/turno.xhtml
+++ b/src/main/webapp/pages/depSalud/turno.xhtml
@@ -124,11 +124,14 @@
                 <div class="actions">
 
                     <p:commandButton id="save" action="#{turnoHome.guardar()}" value="#{messages['common.save']}" styleClass="btn success"
-                                     ajax="true" />
+                                     ajax="true" onclick="imgDlg.show();"/>
                     &nbsp;&nbsp;
                     <h:link outcome="/pages/depSalud/agenda.xhtml" 
                             value="#{messages['common.cancel']}" styleClass="btn" >                         
                     </h:link>
+                    <p:panel id="img_p" widgetVar="imgDlg" style="display:none; width: 30px;" >
+                        <h:graphicImage id="img-spinner" value="/resources/js/loader.gif" style="margin-left: -5px"/>
+                    </p:panel>
                 </div>
             </h:form>
         </ui:define>                          
