--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -249,6 +249,17 @@
                                 </center>
                             </div>
                         </div>
+                        <div class="span3" >
+                            <div class="styleHome">
+                                <center>
+                                    <h:link rendered="#{true}" title="#{messages['modulo.admin.enfermeria']}"
+                                            outcome="/pages/depSalud/agenda">                                                    
+                                        <p:graphicImage value="/resources/img/agendaMed.png" width="65" height="65" />
+                                        <h:outputText value="#{messages['agendaMedica.admin']}" style="float: left"/>
+                                    </h:link>
+                                </center>
+                            </div>
+                        </div>
                     </h:panelGroup>
                     <h:panelGroup  rendered="#{account.tienePermiso('LABORATORISTAS')}">
                         <div class="span3" >
