--- a/src/main/webapp/pages/secretaria/lista.xhtml
+++ b/src/main/webapp/pages/secretaria/lista.xhtml
@@ -6,10 +6,10 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-                template="/WEB-INF/view/templates/glue.xhtml">
+                template="/WEB-INF/view/templates/glue.xhtml"
+                xmlns:ocp="http://java.sun.com/jsf/composite/ocpcommon">
 
     <ui:param name="titulo" value="#{messages['paciente.admin']}"/>
-
     <ui:define name="header-replace">
         <div class="header-replace">            
             <div class="container-header">                
@@ -48,8 +48,8 @@
                 </h:link>
                 #{' '}
                 <p:commandLink id="button-abrirFM" title="#{messages['fichaMedica.abrir']}"  action="#{pacienteListaServicio.renderizarVistaMatriculado('/pages/depSalud/fichaMedica', 'lista')}" 
-                               styleClass="btn btn-img" 
-                               disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{!account.tienePermiso('LABORATORISTAS')}">
+                               styleClass="btn btn-img" oncomplete="#{'imgDlg.show();'}"
+                               disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{!account.tienePermiso('SECRETARIA') or !account.tienePermiso('LABORATORISTAS')}">
                     <p:graphicImage value="/resources/images/consultaMed.png" width="40" height="40"/>                    
                 </p:commandLink>
                 #{' '}
@@ -62,13 +62,13 @@
                 </h:link>
                 #{' '}
                 <p:commandLink id="button-Turno" title="#{messages['common.add']} #{messages['turno.nombre']}" action="#{pacienteListaServicio.renderizarVistaMatriculado('/pages/depSalud/turno', 'depSalud/agenda')}" 
-                               styleClass="btn btn-img" 
-                               disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{!account.tienePermiso('LABORATORISTAS')}">
+                               styleClass="btn btn-img" oncomplete="#{'imgDlg.show();'}"
+                               disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{!account.tienePermiso('SECRETARIA') or !account.tienePermiso('LABORATORISTAS')}">
                     <p:graphicImage value="/resources/img/turno.png" width="40" height="40"/>                  
                 </p:commandLink>
                 #{' '}
                 <h:link id="button-labC" title="#{messages['common.add']} #{messages['Examen.pedidos']}" outcome="/pages/labClinico/pedidoE" styleClass="btn btn-img" 
-                        disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{account.tienePermiso('LABORATORISTAS')}">
+                        disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{account.tienePermiso('LABORATORISTAS')}" >
                     <p:graphicImage value="/resources/img/labClinic.png" width="40" height="40"/>
                     <f:param name="pacienteId" value="#{pacienteListaServicio.pacienteSelecionado.id}"></f:param>                    
                     <f:param name="backView" value="/labClinico/listaPedidosExam"></f:param>
@@ -76,15 +76,25 @@
                 #{' '}
                 <h:link id="buscar" title="Cargar Estudiante del Sistema de Gestion de Académica" outcome="/pages/secretaria/search" styleClass="btn btn-img" >
                     <p:graphicImage value="/resources/images/buscar.png" width="50" height="40"/>
-                    <f:param name="backView" value="secretaria/lista"></f:param>
+                    <f:param name="backView" value="secretaria/paciente"></f:param>
                 </h:link>
+                <p:panel id="img_p" widgetVar="imgDlg" style="display:none; width: 30px;" >
+                    <h:graphicImage id="img-spinner" value="/resources/js/loader.gif" style="margin-left: -5px"/>
+                </p:panel> 
                 <div style="float: right">
-                    <p:inputText id="criterioBuscar" size ="25" value="#{pacienteListaServicio.parametroBusqueda}" title="Ingrese un criterio de busqueda">
-                        <p:ajax event="keyup" update="tablaPacientes"/>
-                    </p:inputText>
-                    &nbsp;
-                    <p:commandButton value="Buscar" action="#{pacienteListaServicio.buscarPorParametro()}" update="tablaPacientes" styleClass="btn info"/>                    
-                    <br/>
+                    <h:panelGroup  layout="block" class="clearfix" >
+                        <label for="criterioBuscar" >#{'Ingrese Criterio de Búsqueda'}</label>
+                        <div class="input" >                             
+                            <p:inputText id="criterioBuscar" size ="25" value="#{pacienteListaServicio.parametroBusqueda}" title="Ingrese un criterio de busqueda"
+                                         style="width: 300px;">
+                                <p:ajax event="keyup" update=":form:tablaPacientes"/>
+                            </p:inputText>                    
+                            <span class="help-inline1"><br/>#{'Ingrese cédula o nombres o apellidos o edad o correo electrónico'}<ocp:message forId="criterioBuscar" /></span>
+                        </div>
+                    </h:panelGroup>  
+
+                    <!--<p:commandButton id="buscarCriterio" value="Buscar" action="# {pacienteListaServicio.buscarPorParametro()}" update="tablaPacientes" styleClass="btn info"/>                    
+                    <br/>-->
                 </div>             
             </div>
 
@@ -100,6 +110,9 @@
                              selection="#{pacienteListaServicio.pacienteSelecionado}"
                              rendered="true"
                              selectionMode="single">
+                    <f:facet name="header">
+                        <h:outputText value="Total Pacientes #{pacienteListaServicio.resultList.size}"/>
+                    </f:facet>
                     <!--Acciones Ajax, que me permiten seleccionar y desseleccionar un paciente-->
                     <p:ajax event="rowSelect" listener="#{pacienteListaServicio.onRowSelect}"   
                             update=":form:button-edit :form:messages :form:button-abrirFM :form:button-servicioM 
